[package]
name = "gridlock"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cogs-gamedev = "0.1.6"
hex2d = "1.0.0"
macroquad = "0.3.0"
once_cell = "1.7.2"
rand = "0.8.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
